2009-08-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm (TGIF_set_color): Support for RGB colors and TC_LT.

2009-08-13  anonymous 

	* term/tek.trm: Add support for xterm tektronix emulation

2009-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: The combination of iteration and in-line definition was
	fatal to splot.  Move the iteration check to encompass definitions also.
	Bug #2833808

2009-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): The calculation of vertical space required
	to hold rotated x axis tick labels was only being done if the margins
	were in auto mode.  Rearrange the code so that the calculation is also
	made for plots with explicit 'set [tb]margin'.
	Bug #2830712

2009-08-04  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Expand section on newhistogram command.

2009-08-04  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* configure.in: Remove unwanted spaces.

	* qtterminal/QtGnuplotScene.* qt_term.cpp: Changed round() to qRound().

	* qtterminal/QtGnuplotInstance.* qtterminal/embed_example.*: Forward
	gnuplot standard outputs to a custom frame.

2009-08-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/color.c src/graphics.c src/graph3d.c:
	Add an additional parameter to all tick_callback() routines. In the case
	of auto-generated ticks, we use this to pass in a list of user-specified
	labels in case one is supposed to replace the auto-generated label.
	The actual label replacement is only implemented for 2D plots.

2009-08-01  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/QtGnuplotWindow.cpp qtterminal/QtGnuplotEvent.cpp qt_term.cpp:
	Close the current plot window when [ctrl+]q is pressed.

	* qtterminal/QtGnuplotInstance.cpp: changed the default path for the
	gnuplot executable in embedded widgets from the local directory to the main
	path.

2009-07-31  James R. Van Zandt  <jrvz@comcast.net>
